<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/btn_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/All"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:textColor="#36A2A6"/>

        <TextView
            android:id="@+id/btn_nearMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingVertical="15dp"
            android:text="@string/NEAR"
            android:background="?attr/selectableItemBackground"
            android:textColor="#000000"/>


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/all_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/nearMe_view"
            app:layout_constraintEnd_toEndOf="@+id/nearMe_view"
            app:layout_constraintStart_toStartOf="@+id/nearMe_view"
            app:layout_constraintTop_toTopOf="@+id/nearMe_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_allUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nearMe_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/my_location"
                        android:layout_gravity="center"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:text="Osan-si, Korea, Republic Of"
                        android:textStyle="bold"/>

                    <ImageButton
                        android:layout_marginLeft="5dp"
                        android:id="@+id/btn_refresh"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/btn_shape"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_baseline_refresh_24" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_NearUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>